Finished swagger api-docs for current api
